Week1: Portal created

--- a/index.html
+++ b/index.html
@@ -2,11 +2,37 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Assigment Portal WDD230</title>
+    <meta name="author" content="Nadia Peralta" />
+    <meta name="description" content="WDD230 BYUI - Assigment Portal for Nadia Peralta Diaz" />
+    <link rel="stylesheet" href="./styles/style.css" />
 </head>
 <body>
-    
+    <header class="header">
+        <h1 class="name">Nadia Peralta Diaz</h1>
+        <img class="portrait" src="./images/IMG_0044_Original-min.jpg" alt="Nadia Peralta self portrait">
+    </header>
+    <main>
+        <h2 class="title">WDD 230: Assignment Portal</h2>
+        <hr>
+        <ul>
+            <li>Lesson 02: <a href="#">Lesson 02</a></li>
+            <li>Lesson 03: <a href="#">Lesson 03</a></li>
+            <li>Lesson 04: <a href="#">Lesson 04</a></li>
+            <li>Lesson 05: <a href="#">Lesson 05</a></li>
+            <li>Lesson 06: <a href="#">Lesson 06</a></li>
+            <li>Lesson 07: <a href="#">Lesson 07</a></li>
+            <li>Lesson 08: <a href="#">Lesson 08</a></li>
+            <li>Lesson 09: <a href="#">Lesson 09</a></li>
+            <li>Lesson 10: <a href="#">Lesson 10</a></li>
+            <li>Lesson 11: <a href="#">Lesson 11</a></li>
+        </ul>
+    </main>
+    <footer class="footer">
+            &copy; <span class="currentyear"></span> | Nadia Peralta Diaz | Argentina 
+        <div class="subscript">Last Updated: <span id="lastModified"></span></div>
+    <script src="./scripts/script.js" defer></script>
+    </footer>
 </body>
 </html>
