--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>Assigment Portal WDD230</title>
     <meta name="author" content="Nadia Peralta" />
     <meta name="description" content="WDD230 BYUI - Assigment Portal for Nadia Peralta Diaz" />
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@300;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./styles/normalize.css" />
+    <link rel="stylesheet" href="./styles/small.css" />
+    <link rel="stylesheet" href="./styles/medium.css" />
+    <link rel="stylesheet" href="./styles/large.css" />
 </head>
 <body>
     <header class="header">
@@ -17,7 +21,7 @@
         <h2 class="title">WDD 230: Assignment Portal</h2>
         <hr>
         <ul>
-            <li>Lesson 02: <a href="#">Lesson 02</a></li>
+            <li>Lesson 02: <a href="./lesson2/design-principles.html">Design Principles</a></li>
             <li>Lesson 03: <a href="#">Lesson 03</a></li>
             <li>Lesson 04: <a href="#">Lesson 04</a></li>
             <li>Lesson 05: <a href="#">Lesson 05</a></li>
