--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="with=device-width,initial-scale=1.0">
         <title> Principles of Design</title>
         <meta name="description" content="Three principles of good design"> 
-        <link rel="stylesheet" href="css/normalize.cs">
+        <link rel="stylesheet" href="css/normalize.css">
         <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@300;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/small.css">
         <link rel="stylesheet" href="css/medium.css">
