--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -21,7 +21,7 @@
         <h2 class="title">WDD 230: Assignment Portal</h2>
         <hr>
         <ul>
-            <li>Lesson 02: <a href="./lesson2/design-principles.html">Design Principles</a></li>
+            <li>Lesson 02: <a href="../lesson2/design-principles.html">Design Principles</a></li>
             <li>Lesson 03: <a href="#">Lesson 03</a></li>
             <li>Lesson 04: <a href="#">Lesson 04</a></li>
             <li>Lesson 05: <a href="#">Lesson 05</a></li>
