--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -42,7 +42,7 @@
     <footer>
         &copy; <span class="currentyear"></span> | Nadia Peralta Diaz | Argentina 
         <div class="subscript">Last Updated: <span id="lastModified"></span></div>
-    <script src="../scripts/script.js" defer></script>
+    <script src="../lesson1/scripts/script.js" defer></script>
     </footer>
     </body>
 </html>
