Week 2 - Final commit

--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -7,10 +7,10 @@
     <meta name="author" content="Nadia Peralta" />
     <meta name="description" content="WDD230 BYUI - Assigment Portal for Nadia Peralta Diaz" />
     <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@300;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./styles/normalize.css" />
-    <link rel="stylesheet" href="./styles/small.css" />
-    <link rel="stylesheet" href="./styles/medium.css" />
-    <link rel="stylesheet" href="./styles/large.css" />
+    <link rel="stylesheet" href="./styles/normalize.css">
+    <link rel="stylesheet" href="./styles/small.css">
+    <link rel="stylesheet" href="./styles/medium.css">
+    <link rel="stylesheet" href="./styles/large.css">
 </head>
 <body>
     <header class="header">
