Week2 - Final Commit

--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -20,14 +20,14 @@
              <section class="todomoda">
                 <h2>Repetition</h2>
                 <img src="./images/todomoda.jpg" alt="TodoModa web page Repetition example">
-                <p>Todomoda's Site:<a href="https://ar.todomoda.com/night-out.html">www.ar.todomoda.com</a><br>
+                <p>Todomoda's Site:<a href="https://ar.todomoda.com/night-out.html">www.ar.todomoda.com</a><br><br>
                     Todomoda's website exemplifies repetition because of the focus on creating consistency using the same position in all the elements. I used the page of their new collection that shows first the picture of the article, then the name and the price as the last part of the information. It creates a visual pattern for all the products forming a more accessible and useful user experience.
                 </p>
             </section>
             <section class="spotify">
                 <h2>Emphasis</h2>
                 <img src="./images/spotify.jpg" alt="Emphasis example on Spotify web">
-                <p>Spotify's Site: <a href="https://www.spotify.com/ar/premium/">www.spotify.com</a><br>
+                <p>Spotify's Site: <a href="https://www.spotify.com/ar/premium/">www.spotify.com</a><br><br>
                     Spotify's website exemplifies emphasis because the page is looking for the user to subscribe to their premium package and the first section that a user sees when he enters the page is a discount for the subscription. Below the user can see the benefits of the premium subscription, and after the benefits the page shows every subscription plan so you can choose the one you prefer. This page creates emphasis on the product that the Spotify website is offering.
                 </p>
             </section>
