--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assigment Portal WDD230</title>
-    <meta name="author" content="Nadia Peralta" />
-    <meta name="description" content="WDD230 BYUI - Assigment Portal for Nadia Peralta Diaz" />
+    <meta name="author" content="Nadia Peralta">
+    <meta name="description" content="WDD230 BYUI - Assigment Portal for Nadia Peralta Diaz">
     <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@300;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/normalize.css">
     <link rel="stylesheet" href="./styles/small.css">
