Week 2 - Final commit

--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
     <meta name="author" content="Nadia Peralta">
     <meta name="description" content="WDD230 BYUI - Assigment Portal for Nadia Peralta Diaz">
     <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@300;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./styles/normalize.css">
-    <link rel="stylesheet" href="./styles/small.css">
-    <link rel="stylesheet" href="./styles/medium.css">
-    <link rel="stylesheet" href="./styles/large.css">
+    <link rel="stylesheet" href="./lesson1/styles/normalize.css">
+    <link rel="stylesheet" href="./lesson1/styles/small.css">
+    <link rel="stylesheet" href="./lesson1/styles/medium.css">
+    <link rel="stylesheet" href="./lesson1/styles/large.css">
 </head>
 <body>
     <header class="header">
         <h1 class="name">Nadia Peralta Diaz</h1>
-        <img class="portrait" src="./images/IMG_0044_Original-min.jpg" alt="Nadia Peralta self portrait">
+        <img class="portrait" src="./lesson1/images/IMG_0044_Original-min.jpg" alt="Nadia Peralta self portrait">
     </header>
     <main>
         <h2 class="title">WDD 230: Assignment Portal</h2>
         <hr>
         <ul>
-            <li>Lesson 02: <a href="../lesson2/design-principles.html">Design Principles</a></li>
+            <li>Lesson 02: <a href="./lesson2/design-principles.html">Design Principles</a></li>
             <li>Lesson 03: <a href="#">Lesson 03</a></li>
             <li>Lesson 04: <a href="#">Lesson 04</a></li>
             <li>Lesson 05: <a href="#">Lesson 05</a></li>
@@ -36,7 +36,7 @@
     <footer class="footer">
             &copy; <span class="currentyear"></span> | Nadia Peralta Diaz | Argentina 
         <div class="subscript">Last Updated: <span id="lastModified"></span></div>
-    <script src="./scripts/script.js" defer></script>
+    <script src="./lesson1/scripts/script.js" defer></script>
     </footer>
 </body>
 </html>
