Assignment changes to have lower size

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assigment Portal WDD230</title>
+    <title>Assignment Portal WDD230</title>
     <meta name="author" content="Nadia Peralta">
     <meta name="description" content="WDD230 BYUI - Assignment Portal for Nadia Peralta Diaz">
     <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@300;700&display=swap" rel="stylesheet">
