Fixing size of webpage

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Assignment Portal WDD230</title>
     <meta name="author" content="Nadia Peralta">
     <meta name="description" content="WDD230 BYUI - Assignment Portal for Nadia Peralta Diaz">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@300;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./lesson1/styles/normalize.css">
     <link rel="stylesheet" href="./lesson1/styles/small.css">
