Week3 Website Planning Document

--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="./styles/large.css">
     </head>
     <header>
-        <h1><br/>Riachuelo - Chamber of Tourism<br><br></h1>
+        <h1>Riachuelo - Chamber of Tourism</h1>
     </header>
     <nav>
         <ul>
@@ -28,9 +28,7 @@
         <div class="container">
             <div class="col">
                 <h3>Color Scheme</h3>
-                <p>
                     <img src='./images/palletecolor.PNG' alt="colorPalette" style="width: 50%" />
-                </p>
 
             </div>
 
