--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="./styles/large.css">
     </head>
     <header>
-        <h1><br>Riachuelo - Chamber of Tourism<br><br></h1>
+        <h1>Riachuelo - Chamber of Tourism</h1>
     </header>
     <nav>
         <ul>
@@ -51,10 +51,10 @@
             </div>
 
             <br><br>
-            <div class="col">
+            <div class="logo" >
                 <h3>Website Logo</h3>
                 
-                <img src="./images/RIACHUELO.png" alt="riachuelo chamber logo" width="100%" />
+                <img src="./images/RIACHUELO.png" alt="riachuelo chamber logo" width="35%" />
 
             </div>
 
@@ -62,7 +62,7 @@
 
     </main> 
     <footer class="footer">
-        &copy; <span class="currentyear"></span> | Nadia Peralta Diaz | Argentina 
+        &copy;<span class="currentyear"></span> | Nadia Peralta Diaz | Argentina 
     <div class="subscript">Last Updated: <span id="lastModified"></span></div>
 <script src="../lesson1/scripts/script.js" defer></script>
 </footer>
