--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="./styles/large.css">
     </head>
     <header>
-        <h1><br/>Riachuelo - Chamber of Tourism<br><br></h1>
+        <h1>Riachuelo - Chamber of Tourism</h1>
     </header>
     <nav>
         <ul>
