--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="./styles/large.css">
     </head>
     <header>
-        <h1><br/>Riachuelo - Chamber of Tourism<br><br></h1>
+        <h1>Riachuelo - Chamber of Tourism</h1>
     </header>
     <nav>
         <ul>
@@ -27,9 +27,9 @@
     <main>
 
         <div class="container">
-            <div class="col">
+            <div>
                 <h3>Typography</h3>                   
-                    <img src='./images/typography.PNG' alt="typography" style="width: 50%" />
+                    <img class="col" src='./images/typography.PNG' alt="typography" style="width: 50%" />
             </div>
 
         </div>
