--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <hr>
         <ul>
             <li>Lesson 02: <a href="./lesson2/design-principles.html">Design Principles</a></li>
-            <li>Lesson 03: <a href="./lesson3/index.html">Lesson 03</a></li>
+            <li>Lesson 03: <a href="./lesson3/index.html">Website Planning Document</a></li>
             <li>Lesson 04: <a href="#">Lesson 04</a></li>
             <li>Lesson 05: <a href="#">Lesson 05</a></li>
             <li>Lesson 06: <a href="#">Lesson 06</a></li>
