Web Planning Week3

--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -46,7 +46,7 @@
             <div class="col">
                 <h3>Domain Name</h3>
                 The chosen domain name is riachuelochamber.com
-                <img src="./images/riachuelochamber.png" alt="riachuelo domain name" style="width: 100%" />
+                <img src="./images/riachuelochamber.png" alt="riachuelo domain name" style="width: 100%">
 
             </div>
 
@@ -54,7 +54,7 @@
             <div class="logo" >
                 <h3>Website Logo</h3>
                 
-                <img src="./images/RIACHUELO.png" alt="riachuelo chamber logo" width="35%" />
+                <img src="./images/RIACHUELO.png" alt="riachuelo chamber logo" width="35%">
 
             </div>
 
