--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -29,7 +29,7 @@
         <div class="container">
             <div>
                 <h3>Typography</h3>                   
-                    <img class="col" src='./images/typography.PNG' alt="typography" style="width: 50%" />
+                    <img class="col" src='./images/typography.PNG' alt="typography" style="width: 50%">
             </div>
 
         </div>
