--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -28,7 +28,7 @@
         <div class="container">
             <div class="col">
                 <h3>Color Scheme</h3>
-                    <img src='./images/palletecolor.PNG' alt="colorPalette" style="width: 50%" />
+                    <img src='./images/palletecolor.PNG' alt="colorPalette" style="width: 50%">
 
             </div>
 
