--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -54,7 +54,7 @@
             <div class="logo" >
                 <h3>Website Logo</h3>
                 
-                <img src="./images/RIACHUELO.png" alt="riachuelo chamber logo" width="35%">
+                <img src="./images/RIACHUELO.png" alt="riachuelo chamber logo" style="width: 100%">
 
             </div>
 
