--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -9,6 +9,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="./styles/normalize.css">
         <link rel="stylesheet" href="./styles/small.css">
         <link rel="stylesheet" href="./styles/medium.css">
         <link rel="stylesheet" href="./styles/large.css">
