Week5 - BOM and Favicon

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
         <meta name="viewport" content="with=device-width,initial-scale=1.0">
         <title>Riachuelo Chamber of Tourism</title>
-        <meta name="description" content="Riachuelo Chamber of Tourism">  
+        <meta name="description" content="Riachuelo Chamber of Tourism"> 
+        <link rel="shortcut icon" href="./favicon.ico"> 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Nixie+One&family=Sansita&display=swap" rel="stylesheet">
