--- a/chamber/index.html
+++ b/chamber/index.html
@@ -16,6 +16,9 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+    <div id="announcement" class="banner">
+        🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.
+    </div>
     <header>
         <div class="first-container">
             <div class="logo-container">
