--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <li>Lesson 02: <a href="./lesson2/design-principles.html">Design Principles</a></li>
             <li>Lesson 03: <a href="./lesson3/index.html">Website Planning Document</a></li>
             <li>Lesson 04: <a href="./chamber/index.html">Chamber Home Page Build</a></li>
-            <li>Lesson 05: <a href="#">Lesson 05</a></li>
+            <li>Lesson 05: <a href="./chamber/index.html">Chamber Home Page Continued</a></li>
             <li>Lesson 06: <a href="#">Lesson 06</a></li>
             <li>Lesson 07: <a href="#">Lesson 07</a></li>
             <li>Lesson 08: <a href="#">Lesson 08</a></li>
