labels for images and creation of disover page

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -22,7 +22,7 @@
     <header>
         <div class="first-container">
             <div class="logo-container">
-                <img class="logo" src="./images/RIACHUELO.webp" alt="Riachuelo">
+                <img class="logo" src="./images/RIACHUELO.webp" href="index.html"alt="Riachuelo">
                 <section class="site-name-container">
                     <h1>Riachuelo</h1>
                     <h2>Chamber of Tourism</h2>
@@ -30,7 +30,7 @@
             </div>
             <div class="change-size">
                 <div class="navBar" id="mainNavBar">
-                    <a href="#">Discover</a>
+                    <a href="discover.html">Discover</a>
                     <a href="#">Directory</a>
                     <a href="#">Join</a>
                     <a href="#">Contact</a>
@@ -48,10 +48,10 @@
     </header>
     <main>
         <section class="hero">
-            <picture>
-                <source media="(min-width: 960px)" srcset="./images/wdd230-org-large.webp">
-                <source media="(min-width: 600px)" srcset="./images/wdd230-org-medium.webp">
-                <img src="./images/wdd230-org-small.webp" alt="Two men and one woman having a business meeting.">
+            <picture class="hero-img-photo">
+                <source media="(min-width: 960px)" srcset="./images/wdd230-org-large.webp" alt="large">
+                <source media="(min-width: 600px)" srcset="./images/wdd230-org-medium.webp" alt="medium">
+                <img src="./images/wdd230-org-small.webp" alt="small">
             </picture>
             <div class="card-info">
                 <h1>Welcome to Riachuelo</h1>
