--- a/chamber/index.html
+++ b/chamber/index.html
@@ -46,7 +46,7 @@
             <p id="today-date"></p>
         </div>
     </header>
-    <main>
+    <main class="main-home">
         <section class="hero">
             <picture class="hero-img-photo">
                 <source media="(min-width: 960px)" srcset="./images/wdd230-org-large.webp" alt="large">
