--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <li>Lesson 05: <a href="./chamber/index.html">Chamber Home Page Continued</a></li>
             <li>Lesson 06: <a href="./chamber/index.html">Responsive Design</a></li>
             <li>Lesson 07: <a href="./lesson7/lazyload.html">Progressive Loading of Images</a></li>
+            <li>Lesson 07: <a href="./chamber/discover.html">The Discover Page - Image Section</a></li>
             <li>Lesson 08: <a href="#">Lesson 08</a></li>
             <li>Lesson 09: <a href="#">Lesson 09</a></li>
             <li>Lesson 10: <a href="#">Lesson 10</a></li>
