--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -142,7 +142,7 @@
 
                 </div>
                 <div> 
-                    <p class="visit"><span>Days between visits: </span> <span class="visits"></span></p>
+                    <p class="visit"><span>Days between visits: </span> <span class="visits"></span></p><br>
                     <address class="place">Brandsen 805, C1161 CABA</address>
                     <address class="email">per8554@byui.edu</address>
                     <address class="contact">+(54) 351 224 0528</address>
