--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <li>Lesson 06: <a href="./chamber/index.html">Responsive Design</a></li>
             <li>Lesson 07: <a href="./lesson7/lazyload.html">Progressive Loading of Images</a></li>
             <li>Lesson 07: <a href="./chamber/discover.html">The Discover Page - Image Section</a></li>
-            <li>Lesson 08: <a href="#">Lesson 08</a></li>
+            <li>Lesson 08: <a href="./lesson8/tablebuild.html">HTML Table Build</a></li>
             <li>Lesson 09: <a href="#">Lesson 09</a></li>
             <li>Lesson 10: <a href="#">Lesson 10</a></li>
             <li>Lesson 11: <a href="#">Lesson 11</a></li>
