--- a/chamber/index.html
+++ b/chamber/index.html
@@ -22,7 +22,7 @@
     <header>
         <div class="first-container">
             <div class="logo-container">
-                <img class="logo" src="./images/RIACHUELO.webp" href="index.html"alt="Riachuelo">
+                <img class="logo" src="./images/RIACHUELO.webp" alt="Riachuelo">
                 <section class="site-name-container">
                     <h1>Riachuelo</h1>
                     <h2>Chamber of Tourism</h2>
@@ -49,8 +49,8 @@
     <main class="main-home">
         <section class="hero">
             <picture class="hero-img-photo">
-                <source media="(min-width: 960px)" srcset="./images/wdd230-org-large.webp" alt="large">
-                <source media="(min-width: 600px)" srcset="./images/wdd230-org-medium.webp" alt="medium">
+                <source media="(min-width: 960px)" srcset="./images/wdd230-org-large.webp">
+                <source media="(min-width: 600px)" srcset="./images/wdd230-org-medium.webp">
                 <img src="./images/wdd230-org-small.webp" alt="small">
             </picture>
             <div class="card-info">
