--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -33,7 +33,7 @@
                     <a href="index.html">Home</a>
                     <a href="discover.html">Discover</a>
                     <a href="#">Directory</a>
-                    <a href="#">Join</a>
+                    <a href="join.html">Join</a>
                     <a href="#">Contact</a>
                     <a href="javascript:void(0);" class="icon" onClick="openDrawerMenu()">&#9776;</a>
                 </div>
