--- a/chamber/join.html
+++ b/chamber/join.html
@@ -48,7 +48,32 @@
         </div>
     </header>
     <main class="clearfix">        
+        <form method="get" action="thankyou.html">   
+            <fieldset>
+                <label class="top">First Name* <input type="text" name="fname" required></label>
+                <label class="top">Last Name* <input type="text" name="lname" required></label>
+                <label class="top">Bussines Position Title <input type="text" pattern="[a-z-' ']{7,}" name="bposition"></label>
+                <label class="top">Email* <input type="email" name="email" placeholder="example@gmail.com" required></label>
+                <label class="top">Cell Phone Number* <input type="tel" name="phone" required></label>
+                <label class="top">Business Name/Title* <input type="text" name="bname" required></label>
 
+                <label class="top"> Membership Level
+                    <select name="subject">
+                        <option value="">Please Select &#9662;</option>
+                        <option value="flashfood">NP Membership</option>
+                        <option value="hail">Bronze Membership</option>
+                        <option value="hurricane">Silver Membership</option>
+                        <option value="thunderstorm">Gold Membership</option>
+                    </select>
+                </label>
+                <div class="top">Business Description:</div>
+                <textarea id="area" name="bdescription" rows="4" cols="35"></textarea>
+            </fieldset>       
+            <input type="hidden" name="form-hour" value="">
+            <input type="submit" value="Submit" class="submitBtn">        
+        
+        
+        </form>
     </main>
     <footer>
         <div class="company-footer">
