--- a/chamber/join.html
+++ b/chamber/join.html
@@ -60,10 +60,10 @@
                 <label class="top"> Membership Level
                     <select name="subject">
                         <option value="">Please Select &#9662;</option>
-                        <option value="flashfood">NP Membership</option>
-                        <option value="hail">Bronze Membership</option>
-                        <option value="hurricane">Silver Membership</option>
-                        <option value="thunderstorm">Gold Membership</option>
+                        <option value="np">NP Membership</option>
+                        <option value="bronze">Bronze Membership</option>
+                        <option value="silver">Silver Membership</option>
+                        <option value="gold">Gold Membership</option>
                     </select>
                 </label>
                 <div class="top">Business Description:</div>
