--- a/chamber/join.html
+++ b/chamber/join.html
@@ -52,7 +52,7 @@
             <fieldset>
                 <label class="top">First Name* <input type="text" name="fname" required></label>
                 <label class="top">Last Name* <input type="text" name="lname" required></label>
-                <label class="top">Bussines Position Title <input type="text" pattern="[a-z-' ']{7,}" name="bposition"></label>
+                <label class="top">Bussiness Position Title <input type="text" pattern="[a-z-' ']{7,}" name="bposition"></label>
                 <label class="top">Email* <input type="email" name="email" placeholder="example@gmail.com" required></label>
                 <label class="top">Cell Phone Number* <input type="tel" name="phone" required></label>
                 <label class="top">Business Name/Title* <input type="text" name="bname" required></label>
