--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <li>Lesson 07: <a href="./chamber/discover.html">The Discover Page - Image Section</a></li>
             <li>Lesson 08: <a href="./lesson8/tablebuild.html">HTML Table Build</a></li>
             <li>Lesson 08: <a href="./chamber/join.html">Join Page</a></li>
-            <li>Lesson 09: <a href="#">Lesson 09</a></li>
+            <li>Lesson 09: <a href="./lesson9/prophets.html">Working with JSON data and the Fetch API</a></li>
             <li>Lesson 10: <a href="#">Lesson 10</a></li>
             <li>Lesson 11: <a href="#">Lesson 11</a></li>
         </ul>
