--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -32,7 +32,7 @@
                 <div class="navBar" id="mainNavBar">
                     <a href="index.html">Home</a>
                     <a href="discover.html">Discover</a>
-                    <a href="#">Directory</a>
+                    <a href="directory.html">Directory</a>
                     <a href="join.html">Join</a>
                     <a href="#">Contact</a>
                     <a href="javascript:void(0);" class="icon" onClick="openDrawerMenu()">&#9776;</a>
@@ -47,7 +47,7 @@
             <p id="today-date"></p>
         </div>
     </header>
-    <main class="clearfix">        
+    <main class="clearfix" class="main-home">        
         <div class="h1-gallery">
             <h1>La Boca, Buenos Aires</h1>
         </div>
