--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -32,7 +32,7 @@
                 <div class="navBar" id="mainNavBar">
                     <a href="index.html">Home</a>
                     <a href="discover.html">Discover</a>
-                    <a href="#">Directory</a>
+                    <a href="directory.html">Directory</a>
                     <a href="join.html">Join</a>
                     <a href="#">Contact</a>
                     <a href="javascript:void(0);" class="icon" onClick="openDrawerMenu()">&#9776;</a>
@@ -47,12 +47,11 @@
             <p id="today-date"></p>
         </div>
     </header>
-    <main class="clearfix">        
-            <div class="menu">
+    <main class="listgrid">        
+            <div class="menudirectory">
                 <button id="grid">Grid</button>
                 <button id="list">List</button>
             </div>
-            <hr>
             <article class="cards">              
             </article>
     </main>
