--- a/chamber/index.html
+++ b/chamber/index.html
@@ -31,7 +31,7 @@
             <div class="change-size">
                 <div class="navBar" id="mainNavBar">
                     <a href="discover.html">Discover</a>
-                    <a href="#">Directory</a>
+                    <a href="directory.html">Directory</a>
                     <a href="join.html">Join</a>
                     <a href="#">Contact</a>
                     <a href="javascript:void(0);" class="icon" onClick="openDrawerMenu()">&#9776;</a>
