--- a/chamber/join.html
+++ b/chamber/join.html
@@ -32,7 +32,7 @@
                 <div class="navBar" id="mainNavBar">
                     <a href="index.html">Home</a>
                     <a href="discover.html">Discover</a>
-                    <a href="#">Directory</a>
+                    <a href="directory.html">Directory</a>
                     <a href="join.html">Join</a>
                     <a href="#">Contact</a>
                     <a href="javascript:void(0);" class="icon" onClick="openDrawerMenu()">&#9776;</a>
