--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
             <li>Lesson 08: <a href="./chamber/join.html">Join Page</a></li>
             <li>Lesson 09: <a href="./lesson9/prophets.html">Working with JSON data and the Fetch API</a></li>
             <li>Lesson 09: <a href="./chamber/json/data.json">JSON for Chamber</a></li>
+            <li>Lesson 09: <a href="./chamber/json/data.json">JSON for Chamber</a></li>
+            <li>Lesson 09: <a href="./chamber/directory.html">The Business Directory Page</a></li>
             <li>Lesson 10: <a href="#">Lesson 10</a></li>
             <li>Lesson 11: <a href="#">Lesson 11</a></li>
         </ul>
