fixing some errors

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -47,7 +47,7 @@
                 <button id="grid">Grid</button>
                 <button id="list">List</button>
             </div>
-            <article class="cards">              
+            <article class="grid cards">              
             </article>
     </main>
     <footer>
