--- a/lesson10/weather-api.html
+++ b/lesson10/weather-api.html
@@ -14,9 +14,9 @@
 <p>The current temperature in Fairbanks, Alaska is <span id="current-temp"></span> &deg;F</p>
 <h2>Current Condition Icon</h2>
 <figure>
-  <img src="" alt="" id="weather-icon" />
+  <img src="#" alt="" id="weather-icon" />
   <figcaption></figcaption>
 </figure>
-</body>
 <script src="./scripts/weatherapi.js"></script>
+</body>
 </html>
