--- a/chamber/index.html
+++ b/chamber/index.html
@@ -68,10 +68,13 @@
         <section class="weather">
             <div>
                 <h1>Weather</h1>
+                <figure>
+                    <img src="#" alt="" id="weather-icon" />
+                    <figcaption></figcaption>
+                  </figure>
                 <p>Temperature: <span id="tempF">50</span>°F</p>
-                <p>Humidity: 33%</p>
                 <p>Wind Speed: <span id="speed">5</span> mph</p>
-                <p>WindChill: <span id="windchill"></span>°F</p>
+                <p>WindChill: <span id="windchill"></span></p>
             </div>
         </section>
         <section class="news-release">
@@ -148,6 +151,7 @@
         </div>
         <div class="infofooter">
             <small> &copy;<span class="currentyear"></span> Riachuelo Chamber | <b>Nadia Peralta Diaz</b> | WDD 230 Project | Last Updated: <span id="lastModified"></span></small>
+            <br><a href="https://openweathermap.org/">Open Weather Api</a>
         </div>
     </footer>
 
