--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <li>Lesson 09: <a href="./chamber/json/data.json">JSON for Chamber</a></li>
             <li>Lesson 09: <a href="./chamber/directory.html">The Business Directory Page</a></li>
             <li>Lesson 10: <a href="./lesson10/weather-api.html">Weather Api</a></li>
-            <li>Lesson 10: <a href="#">Lesson 10</a></li>
+            <li>Lesson 10: <a href="./chamber/index.html">Using the Weather API</a></li>
             <li>Lesson 11: <a href="#">Lesson 11</a></li>
         </ul>
     </main>
