json response for chamber

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -90,50 +90,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. asd dsdad e ea adipisci mollitia fugiat consectetur inventore, minima, fuga deserunt aperiam? </p>
             </div>
         </section>
-        <div class="spotlights">
-            <section>
-                <div class="spotlightshead">
-                    <h2>Lorem Ipsum</h2>
-                    <img src="#" alt="">
-                </div>
-                <div class="spotlightsbody">
-                    <p class="spotlightstext">Lorem ipsum dolor sit amet.</p>
-                    <div class="spotlightscontact">
-                        <address>lorem@ipsum.com</address>
-                        <address>+111-1111-1111</address>
-                        <address><a href="#" class="spotlightslink">Website</a></address>
-                    </div>
-                </div>
-            </section>
-            <section>
-                <div class="spotlightshead">
-                    <h2>Lorem Ipsum</h2>
-                    <img src="#" alt="">
-                </div>
-                <div class="spotlightsbody">
-                    <p class="spotlightstext">Lorem ipsum dolor sit amet.</p>
-                    <div class="spotlightscontact">
-                        <address>lorem@ipsum.com</address>
-                        <address>+111-1111-1111</address>
-                        <address><a href="#" class="spotlightslink">Website</a></address>
-                    </div>
-                </div>
-            </section>
-            <section>
-                <div class="spotlightshead">
-                    <h2>Lorem Ipsum</h2>
-                    <img src="#" alt="">
-                </div>
-                <div class="spotlightsbody">
-                    <p class="spotlightstext">Lorem ipsum dolor sit amet.</p>
-                    <div class="spotlightscontact">
-                        <address>lorem@ipsum.com</address>
-                        <address>+111-1111-1111</address>
-                        <address><a href="#" class="spotlightslink">Website</a></address>
-                    </div>
-                </div>
-            </section>
-        </div>
+        <div class="spotlights"></div>
     </main>
     <footer>
         <div class="company-footer">
@@ -142,6 +99,7 @@
                     <h2>Riachuelo - Chamber of Tourism</h2>
                 </div>
                 <div>
+                    <p class="visit"><span>Days between visits: </span> <span class="visits"></span></p><br>
                     <address class="place">Brandsen 805, C1161 CABA</address>
                     <address class="email">per8554@byui.edu</address>
                     <address class="contact">+(54) 351 224 0528</address>
@@ -159,6 +117,7 @@
 
     <script src="./scripts/script.js" defer></script>
     <script src="./scripts/windchill.js" defer></script>
+    <script src="./scripts/jsonchamber.js" defer></script>
     
 </body>
 </html>
