--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -33,7 +33,7 @@
                     <a href="discover.html">Discover</a>
                     <a href="directory.html">Directory</a>
                     <a href="join.html">Join</a>
-                    <a href="#">Contact</a>
+                    <a href="contact.html">Contact</a>
                     <a href="javascript:void(0);" class="icon" onClick="openDrawerMenu()">&#9776;</a>
                 </div>
             </div>
@@ -62,7 +62,8 @@
                     <address class="place">Brandsen 805, C1161 CABA</address>
                     <address class="email">per8554@byui.edu</address>
                     <address class="contact">+(54) 351 224 0528</address>
-                    <a class="map" href="#">📌Location Map</a>
+                    <a class="map" href="https://goo.gl/maps/qoXTsNw2dLXVEk49A">📌Location Map</a>
+
                 </div>
             </div>
         </div>
