--- a/chamber/index.html
+++ b/chamber/index.html
@@ -33,7 +33,7 @@
                     <a href="discover.html">Discover</a>
                     <a href="directory.html">Directory</a>
                     <a href="join.html">Join</a>
-                    <a href="#">Contact</a>
+                    <a href="contact.html">Contact</a>
                     <a href="javascript:void(0);" class="icon" onClick="openDrawerMenu()">&#9776;</a>
                 </div>
                 <div class="icon-container">
@@ -49,9 +49,9 @@
     <main class="main-home">
         <section class="hero">
             <picture class="hero-img-photo">
-                <source media="(min-width: 960px)" srcset="./images/wdd230-org-large.webp">
-                <source media="(min-width: 600px)" srcset="./images/wdd230-org-medium.webp">
-                <img src="./images/wdd230-org-small.webp" alt="small">
+                <source media="(min-width: 960px)" srcset="./images/caminito-large.webp">
+                <source media="(min-width: 600px)" srcset="./images/caminito-medium.webp">
+                <img src="./images/caminito-small.webp" alt="Caminito small">
             </picture>
             <div class="card-info">
                 <h1>Welcome to Riachuelo</h1>
@@ -60,9 +60,11 @@
         </section>
         <section class="event">
             <div>
-                <h1>Event</h1>
-                <h2>Lorem Ipsum Dolor Sit</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.tur perspiciatis, cupiditate eum labore? Iusto, laborum ducimus commodi nostrum qui alias?</p>
+                <h1>Chamber Weekly Reunion</h1>
+                <h2>Every Wednesday at 7:00 p.m.</h2>
+                <p>Connect with bussinesses and create a great network.</p><br>
+                <p>We will reunite at Shers's Hotel to enjoy a good evening with food and music.</p>br
+                <p>This meeting can be a good opportunity for your company.</p>
             </div>
         </section>
         <section class="weather">
@@ -80,14 +82,16 @@
         <section class="news-release">
             <div>
                 <h1>News Release</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic eius ab ipsam assumenda ad fugit at rem temporibus laudantium inventore fugiat accusantium nobis itaque labore asperiores numquam, tenetur quia sequi.</p>
+                <h2 class="news-h2">Boca Juniors news today: possible sponsors for 2023</h2><br>
+                <p>The Boca squad continues to enjoy its license until December 6, at which time the preseason will formally begin, so Juan Román Riquelme and company are already campaigning to get an economic injection that allows them to bring hierarchy to the squad.</p>
 
             </div>
         </section>
         <section class="join">
             <div>
-                <h1>Join Us!</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. asd dsdad e ea adipisci mollitia fugiat consectetur inventore, minima, fuga deserunt aperiam? </p>
+                <h1>Join the Chamber</h1>
+                <p>Be part of this exclusive chamber and change the world of tourism.</p><br>
+                <p> YOU CAN MAKE THE DIFFERENCE!</p>
             </div>
         </section>
         <div class="spotlights"></div>
@@ -103,11 +107,9 @@
                     <address class="place">Brandsen 805, C1161 CABA</address>
                     <address class="email">per8554@byui.edu</address>
                     <address class="contact">+(54) 351 224 0528</address>
-                    <a class="map" href="https://goo.gl/maps/6qdbV1SGk4sEd3bd9">📌Location Map</a>
-                    
+                    <a class="map" href="https://goo.gl/maps/qoXTsNw2dLXVEk49A">📌Location Map</a>
                 </div>
             </div>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13130.710184614969!2d-58.37045016091647!3d-34.63758808721017!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a334b0bf5ff0a5%3A0x3858a68c0d7599a0!2sLa%20Boca%2C%20CABA!5e0!3m2!1ses-419!2sar!4v1669673944871!5m2!1ses-419!2sar" width="100%" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         <div class="infofooter">
             <small> &copy;<span class="currentyear"></span> Riachuelo Chamber | <b>Nadia Peralta Diaz</b> | WDD 230 Project | Last Updated: <span id="lastModified"></span></small>
@@ -115,9 +117,9 @@
         </div>
     </footer>
 
-    <script src="./scripts/script.js" defer></script>
-    <script src="./scripts/windchill.js" defer></script>
-    <script src="./scripts/jsonchamber.js" defer></script>
+    <script type="module" src="./scripts/script.js" defer></script>
+    <script type="module" src="./scripts/windchill.js" defer></script>
+    <script type="module" src="./scripts/jsonchamber.js" defer></script>
     
 </body>
 </html>
