--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <li>Lesson 09: <a href="./chamber/directory.html">The Business Directory Page</a></li>
             <li>Lesson 10: <a href="./lesson10/weather-api.html">Weather Api</a></li>
             <li>Lesson 10: <a href="./chamber/index.html">Using the Weather API</a></li>
-            <li>Lesson 11: <a href="#">Lesson 11</a></li>
+            <li>Lesson 11: <a href="./chamber/index.html">The Chamber of Commerce Site</a></li>
         </ul>
     </main>
     <footer class="footer">
