--- a/chamber/index.html
+++ b/chamber/index.html
@@ -63,8 +63,7 @@
                 <h1>Chamber Weekly Reunion</h1>
                 <h2>Every Wednesday at 7:00 p.m.</h2>
                 <p>Connect with bussinesses and create a great network.</p><br>
-                <p>We will reunite at Shers's Hotel to enjoy a good evening with food and music.</p>br
-                <p>This meeting can be a good opportunity for your company.</p>
+                <p>We will reunite at Shers's Hotel to enjoy a good evening with food and music.</p>
             </div>
         </section>
         <section class="weather">
