--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -47,7 +47,7 @@
             <p id="today-date"></p>
         </div>
     </header>
-    <main class="clearfix" class="main-home">        
+    <main class="clearfix" >        
         <div class="h1-gallery">
             <h1>La Boca, Buenos Aires</h1>
         </div>
