--- a/chamber/index.html
+++ b/chamber/index.html
@@ -116,9 +116,9 @@
         </div>
     </footer>
 
-    <script type="module" src="./scripts/script.js" defer></script>
-    <script type="module" src="./scripts/windchill.js" defer></script>
-    <script type="module" src="./scripts/jsonchamber.js" defer></script>
+    <script src="./scripts/script.js" defer></script>
+    <script src="./scripts/windchill.js" defer></script>
+    <script src="./scripts/jsonchamber.js" defer></script>
     
 </body>
 </html>
